--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,32 @@
     "tasks": [
         {
             "type": "cppbuild",
+            "label": "C/C++: g++.exe compile encode_decode",
+            "command": "C:\\msys64\\mingw64\\bin\\g++.exe",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${workspaceFolder}\\src\\encode_decode.cpp",
+                "${workspaceFolder}\\src\\ecm.cpp",
+                "-I",
+                "${workspaceFolder}\\src",
+                "-o",
+                "${workspaceFolder}\\output\\encode_decode.exe"
+            ],
+            "options": {
+                "cwd": "${workspaceFolder}\\output\\"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "Depure the information extractor."
+        },
+        {
+            "type": "cppbuild",
             "label": "C/C++: g++.exe compile test_info_extract",
             "command": "C:\\msys64\\mingw64\\bin\\g++.exe",
             "args": [
